[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/BasePlateScenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/BasePlateScenes/BasePlateSprites/idle_player.png" type="Texture" id=2]
[ext_resource path="res://assets/BasePlateScenes/playerHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/BasePlateScenes/deathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/BasePlateScenes/pauseMenu.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.3333 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="Node2D" groups=["player"]]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
scale = Vector2( 1, 0.7 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
scale = Vector2( 1, 1.5 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -1.90735e-06, 1.43051e-07 )
scale = Vector2( 0.2, 0.4 )
frames = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
z_index = 2
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="playerHUD" parent="KinematicBody2D/Camera2D" instance=ExtResource( 3 )]
margin_left = -383.0
margin_top = -317.143
margin_right = -383.0
margin_bottom = -317.143

[node name="deathScreen" parent="KinematicBody2D/Camera2D" instance=ExtResource( 4 )]
visible = false
margin_left = -227.0
margin_top = -134.286
margin_right = -227.0
margin_bottom = -134.286

[node name="pauseMenu" parent="KinematicBody2D/Camera2D" instance=ExtResource( 5 )]
visible = false
margin_left = -63.0
margin_top = -35.7143
margin_right = -63.0
margin_bottom = -35.7143

[connection signal="health_changed" from="KinematicBody2D" to="KinematicBody2D/Camera2D/playerHUD" method="_on_KinematicBody2D_health_changed"]
[connection signal="score_changed" from="KinematicBody2D" to="KinematicBody2D/Camera2D/playerHUD" method="_on_KinematicBody2D_score_changed"]
